# learna

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  setup.cfg
docs/: .gitignore
learna/activations/: __init__.py  binary_step.py  hyperbolic_tangent.py  leaky_rectified_linear_unit.py  linear.py  rectified_linear_unit.py  sigmoid.py  softmax.py
learna/model/: __init__.py  model.py
tests/: test_activations.py  test_simple_model.py
