[tool.poetry]
name = "learna_ml"
version = "0.1.0"
description = ""
authors = ["Naveen Anil <naveenms01@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
twine = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
